Added .php to filename

--- a/perch/templates/content/alinea.html
+++ b/perch/templates/content/alinea.html
@@ -4,7 +4,7 @@
 	<perch:content id="alineakop" type="text" label="Alinea Kop" required="true" title="true" />
 </h2>
 
-<perch:template path="layouts/regionedit.template" />
+<perch:template path="layouts/regionedit.template.php" />
 
 <perch:if exists="alineaimage">
 	<img class="foto" src="<perch:content id="alineaimage" type="image" label="Foto" />" 
