Added extra instructions where to put this

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 /* Style snippet for Region_Editor */
+/* Add this snippet to your frontend .css file in order to hide and show the edit-icons */
 
 /* Edit this snippet to alter the way the edit-icon is displayed on your front-end pages */ 
 /* It requires an edit image in /img/ */
